# othello-ai-character

./: .gitignore  README.md  index.html  package-lock.json  package.json
agent-server/: example-server_config.json  pyproject.toml  start_server.sh
agent-server/agent_server/: main.py  utils.py  vits.py
agent-server/config/: config.json
agent-server/pretrained_models/: info.json
src/: App.tsx  index.css
src/components/: Board.tsx  Game.tsx  Player.tsx  Square.tsx
