[tool.poetry]
name = "agent-server"
version = "0.1.0"
description = ""
authors = ["Miao <zhongtao.miao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
openai = "^1.23.2"
flask = "^3.0.3"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
