[tool.poetry]
name = "agent-server"
version = "0.1.0"
description = ""
authors = ["Miao <zhongtao.miao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
openai = "^1.23.2"
flask = "^3.0.3"
flask-cors = "^4.0.0"
pyvts = "^0.3.2"
requests = "^2.31.0"
cython = "0.29.34"
librosa = "0.10.0.post2"
matplotlib = "3.7.1"
phonemizer = "3.2.1"
scipy = "1.10.1"
tensorboard = "2.13.0"
unidecode = "1.3.6"
pyopenjtalk = "0.3.3"
ffmpeg = "1.4"
jamo = "0.4.1"
cn2an = "0.5.19"
gradio = "3.17.0"
pypinyin = "0.48.0"
jieba = "0.42.1"
torch = [
    { url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl", markers="sys_platform == 'linux'"},
#    { url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp310-cp310-linux_x86_64.whl", markers="sys_platform == 'linux'"},
]
torchvision = [
    { url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-linux_x86_64.whl", markers="sys_platform == 'linux'"},
#    { url = "https://download.pytorch.org/whl/cu117/torchvision-0.14.1%2Bcu117-cp310-cp310-linux_x86_64.whl", markers="sys_platform == 'linux'"},
]
pygame = "^2.5.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
